Made cards for my projects, updated documents.

--- a/index.html
+++ b/index.html
@@ -120,28 +120,38 @@
 
                     <div class="proj-cat" style="background-color: rgb(45, 114, 45); text-align: right;">
                         <h4>Technical Writing and UX Writing</h4>
-                        <h5>Instructions, reports, and microcopy.</h5>
+                        <h5>Instructions, style guides, and microcopy.</h5>
                     </div>
                     <div class="all-projects" style="background-color: rgb(45, 114, 45)">
                         <div class="proj">
                             <div class="proj-pic-main">
-                                <img src="assets/Day 10 preview.png" class="proj-pic">
+                            <img src="assets/TechnicalWritingSamples/discbotpreview.png" class="proj-pic"> 
                             </div>
                             <div class="proj-text-main">
-                                <div class="proj-title">UX Writing Samples</div>
-                                <p>Samples from the Daily UX Writing Challenge, with explanations and Figma mockups.</p>
-                                <a class="view-btn" href='uxwritingsamples.html'>View Samples</a>
+                                <div class="proj-title">Creating a Discord Bot</div>
+                                <p>Guide on how to create a simple Discord greeting bot using Python.</p>
+                                <a class="view-btn" href='assets/TechnicalWritingSamples/Creating a Discord Bot.pdf' target="_blank">View Guide</a>
                             </div>
-                        </div>
+                        </div> 
                         <div class="proj">
-                        <div class="proj-pic-main">
-                        <img src="assets/techwritingpreview.png" class="proj-pic"> 
-                    </div>
-                        <div class="proj-text-main">
-                            <div class="proj-title">Technical Writing Samples</div>
-                            <p>Technical writing samples to showcase my writing skillset.</p>
-                            <a class="view-btn" href='techwritingsamples.html'>View Samples</a>
-                        </div>
+                            <div class="proj-pic-main">
+                            <img src="assets/TechnicalWritingSamples/styleguidetitle.png" style="border-bottom: 1px solid black" class="proj-pic"> 
+                            </div>
+                            <div class="proj-text-main">
+                                <div class="proj-title">Documentation Style Guide</div>
+                                <p>Documentation style guide for a fake statistical software company.</p>
+                                <a class="view-btn" href='assets/TechnicalWritingSamples/Documentation Style Guide.pdf' target="_blank">View Guide</a>
+                            </div>
+                        </div> 
+                        <div class="proj">
+                            <div class="proj-pic-main">
+                            <img src="assets/TechnicalWritingSamples/awsinstance.png" class="proj-pic"> 
+                            </div>
+                            <div class="proj-text-main">
+                                <div class="proj-title">Introduction to Instances in AWS</div>
+                                <p>An intruductory guide to AWS instances and how to launch, configure, and connect to one.</p>
+                                <a class="view-btn" href='assets/TechnicalWritingSamples/Introduction to AWS Instances.pdf' target="_blank">View Guide</a>
+                            </div>
                         </div> 
                     </div>
 
@@ -150,7 +160,7 @@
                         <h5>Sample websites that don't involve analytics.</h5>
                     </div>
                     <div class="all-projects" style="background-color: rgb(67, 134, 161);">
-                        <p>Don't see any projects around here yet. Check back soon or look at another category!</p>
+                        <p style="padding:2%">Don't see any projects around here yet. Check back soon or look at another category!</p>
                     </div>
             </div>           
         </div>
