--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="nav navbar-nav">
                             <li class= "nav-item">
-                                <a class="nav-link mx-4" href="#abt">ABOUT</a>
+                                <a class="nav-link mx-4" href="#about">ABOUT</a>
                             </li>
                             <li class= "nav-item">
                                 <a class="nav-link mx-4" href="#projects">PROJECTS</a>
@@ -53,7 +53,7 @@
         </div>
 
         <!--About. Include resume here -->
-        <div  id="abt">
+        <div  id="about">
             <div id="abt-card">
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
