--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             </div>                
         </div>
 
-        <!--About. Include resume here -->
+        <!--About -->
         <div  id="about">
             <div id="abt-card">
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
                     <h3>Hi, I'm Jenny!</h3>
-                    <p>I'm a senior Computer Science student at Wichita State University looking for internships in data analytics, technical writing, UX writing, or web development.</p>
+                    <p>I'm a senior Computer Science student at Wichita State University looking for internships in data analytics, technical / UX writing, or web development.</p>
                     <p>All of these roles combine my passion for storytelling, design, and research with my interest in tech and programming.</p>
                     <span class="socials">
                         <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
@@ -119,7 +119,7 @@
                     </div>
 
                     <div class="proj-cat" style="background-color: rgb(45, 114, 45); text-align: right;">
-                        <h4>Technical Writing and UX Writing</h4>
+                        <h4>Technical / UX Writing</h4>
                         <h5>Instructions, style guides, and microcopy.</h5>
                     </div>
                     <div class="all-projects" style="background-color: rgb(45, 114, 45)">
@@ -169,7 +169,7 @@
 
         <!-- Resume -->
         <div class="container" id="resm">
-            <h3>Before you go, take my resume!</h3>
+            <h3 id="resm-call">Before you go, take my resume!</h3>
             <h5>Get the details on my experience, skills, and more. All in one document.</h5>
             <input type="button" id='resm-btn' onclick="location.href='assets/Jennifer Pero Resume.pdf'" value="View resume"></button>
         </div>
