--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Introduction to Instances in AWS</div>
-                                <p>An intruductory guide to AWS instances and how to launch, configure, and connect to one.</p>
+                                <p>An introductory guide to AWS instances and how to launch, configure, and connect to one.</p>
                                 <a class="view-btn" href='assets/TechnicalWritingSamples/Introduction to AWS Instances.pdf' target="_blank">View Guide</a>
                             </div>
                         </div> 
