--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
         <!-- Resume -->
         <div class="container" id="resm">
-            <h3 id="resm-call">Before you go, take my resume!</h3>
-            <h5 id="resm-desc">Get the details on my experience, skills, and more. All in one document.</h5>
+            <h3>Before you go, take my resume!</h3>
+            <h5>Get the details on my experience, skills, and more. All in one document.</h5>
             <input type="button" id='resm-btn' onclick="location.href='assets/Jennifer Pero Resume.pdf'" value="View resume"></button>
         </div>
     </body>
