--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="container" id="resm">
             <h3>Before you go, take my resume!</h3>
             <h5>Get the details on my experience, skills, and more. All in one document.</h5>
-            <input type="button" id='resm-btn' onclick="location.href='assets/Jennifer Pero Resume.pdf'" value="View resume"></button>
+            <input type="button" id='resm-btn' onclick="location.href='assets/Jennifer Pero Resume.pdf'" value="View Resume"></button>
         </div>
     </body>
 </html>
