Mobile designs for home and about sections

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
                     <h3>Hi, I'm Jenny!</h3>
-                    <p>I'm a senior Computer Science student at Wichita State University looking for internships in data analytics, technical / UX writing, or web development.</p>
+                    <p>I'm a senior Comp Sci student at Wichita State University looking for internships in data analytics, technical / UX writing, or web development.</p>
                     <p>All of these roles combine my passion for storytelling, design, and research with my interest in tech and programming.</p>
                     <span class="socials">
                         <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
