--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <!--About -->
-        <div  id="about">
+        <div id="about">
             <div id="abt-card">
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
@@ -87,7 +87,7 @@
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Work Injury Power BI Dashboard</div>
-                                <p>Interactive dashboard reporting work injury metrics for a fake power plant company.</p>
+                                <p>DWork injury metrics for a fake power plant company.</p>
                                 <a class="view-btn" href='https://app.powerbi.com/view?r=eyJrIjoiMTc4ODk1MmYtMjFhZi00Zjc1LTkyYTAtZjdjZDU3MzRiOTVhIiwidCI6ImUwNWI2YjNmLTE5ODAtNGIyNC04NjM3LTU4MDc3MWY0NGRlZSIsImMiOjN9' target="_blank">View Dashboard</a>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Ticket Metrics Tableau Dashboard</div>
-                                <p>Interactive dashboard reporting fake 2020 help desk ticket metrics.</p>
+                                <p>Dashboard reporting fake 2020 help desk ticket metrics.</p>
                                 <a class="view-btn" href='https://public.tableau.com/views/HelpDeskTicketMetrics2020/HelpDeskMetrics2020?:language=en-US&:display_count=n&:origin=viz_share_link' target="_blank">View Dashboard</a>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                     <div class="all-projects" style="background-color: rgb(45, 114, 45)">
                         <div class="proj">
                             <div class="proj-pic-main">
-                            <img src="assets/TechnicalWritingSamples/discbotpreview.png" class="proj-pic"> 
+                                <img src="assets/TechnicalWritingSamples/discbotpreview.png" class="proj-pic"> 
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Creating a Discord Bot</div>
@@ -133,7 +133,7 @@
                         </div> 
                         <div class="proj">
                             <div class="proj-pic-main">
-                            <img src="assets/TechnicalWritingSamples/styleguidetitle.png" style="border-bottom: 1px solid black" class="proj-pic"> 
+                                <img src="assets/TechnicalWritingSamples/styleguidetitle.png" style="border-bottom: 1px solid black" class="proj-pic"> 
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Documentation Style Guide</div>
@@ -143,11 +143,11 @@
                         </div> 
                         <div class="proj">
                             <div class="proj-pic-main">
-                            <img src="assets/TechnicalWritingSamples/awsinstance.png" class="proj-pic"> 
+                                <img src="assets/TechnicalWritingSamples/awsinstance.png" class="proj-pic"> 
                             </div>
                             <div class="proj-text-main">
-                                <div class="proj-title">Introduction to Instances in AWS</div>
-                                <p>An introductory guide to AWS instances and how to launch, configure, and connect to one.</p>
+                                <div class="proj-title">Introduction to AWS Instances</div>
+                                <p>Introductory guide to AWS instances and how to launch, configure, and connect to one.</p>
                                 <a class="view-btn" href='assets/TechnicalWritingSamples/Introduction to AWS Instances.pdf' target="_blank">View Guide</a>
                             </div>
                         </div> 
@@ -166,7 +166,7 @@
         <span class="anchor" id="resume"></span>
 
         <!-- Resume -->
-        <div class="container" id="resm">
+        <div id="resm">
             <h3>Before you go, take my resume!</h3>
             <h5>Get the details on my experience, skills, and more. All in one document.</h5>
             <input type="button" id='resm-btn' onclick="location.href='assets/Jennifer Pero Resume.pdf'" value="View Resume"></button>
