--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Work Injury Power BI Dashboard</div>
-                                <p>DWork injury metrics for a fake power plant company.</p>
+                                <p>Work injury metrics for a fake power plant company.</p>
                                 <a class="view-btn" href='https://app.powerbi.com/view?r=eyJrIjoiMTc4ODk1MmYtMjFhZi00Zjc1LTkyYTAtZjdjZDU3MzRiOTVhIiwidCI6ImUwNWI2YjNmLTE5ODAtNGIyNC04NjM3LTU4MDc3MWY0NGRlZSIsImMiOjN9' target="_blank">View Dashboard</a>
                             </div>
                         </div>
