Removed web dev mentions, mentioned data viz

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
                     <h3>Hi, I'm Jenny!</h3>
-                    <p>I'm a senior Comp Sci student at Wichita State University looking for internships in data analytics, technical / UX writing, or web development.</p>
+                    <p>I'm a senior Comp Sci student at Wichita State University looking for internships in data analytics, technical writing, data visualization, or UX writing.</p>
                     <p>All of these roles combine my passion for storytelling, design, and research with my interest in tech and programming.</p>
                     <span class="socials">
                         <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
@@ -116,11 +116,11 @@
                         </div>
                     </div>
 
-                    <div class="proj-cat" style="background-color: rgb(45, 114, 45); text-align: right;">
+                    <div class="proj-cat" style="background-color: rgb(67, 134, 161); text-align: right;">
                         <h4>Technical / UX Writing</h4>
                         <h5>Instructions, style guides, and microcopy.</h5>
                     </div>
-                    <div class="all-projects" style="background-color: rgb(45, 114, 45)">
+                    <div class="all-projects" style="background-color: rgb(67, 134, 161)">
                         <div class="proj">
                             <div class="proj-pic-main">
                                 <img src="assets/TechnicalWritingSamples/discbotpreview.png" class="proj-pic"> 
@@ -151,14 +151,6 @@
                                 <a class="view-btn" href='assets/TechnicalWritingSamples/Introduction to AWS Instances.pdf' target="_blank">View Guide</a>
                             </div>
                         </div> 
-                    </div>
-
-                    <div class="proj-cat" style="background-color: rgb(67, 134, 161);">
-                        <h4>Web Development</h4>
-                        <h5>Sample websites that don't involve analytics.</h5>
-                    </div>
-                    <div class="all-projects" style="background-color: rgb(67, 134, 161);">
-                        <p style="padding:2%">Don't see any projects around here yet. Check back soon or look at another category!</p>
                     </div>
             </div>           
         </div>
