--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
                                 <a class="nav-link mx-4" href="#about">About</a>
                             </li>
                             <li class= "nav-item">
-                                <a class="nav-link mx-4" href="#projects">Experience</a>
+                                <a class="nav-link mx-4" href="#experience">Experience</a>
                             </li>
                             <li class= "nav-item">
-                                <a class="nav-link mx-4" href="#resume">Portfolio</a>
+                                <a class="nav-link mx-4" href="#portfolio">Portfolio</a>
                             </li>
                         </ul>
                 </div>
             </nav>
         <!--Home/Hero-Section-->
             <div id="hero-section">
-                <div id="home-card">
-                <div id='abt-text'>
-                    <h2>Hi, I'm Jenny!</h2>
-                    <p>An aspiring technical editor/writer looking for internships and new grad roles. </p>
-                    <span class="socials">
-                        <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
-                        <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
-                    </span>
-                </div> 
-                <img src='assets/portrait.jpg' id='home-pic'>
+                <div id="hero-card">
+                    <div id='hero-text'>
+                        <h2>Hi, I'm Jenny!</h2>
+                        <p id="hero-desc">An aspiring technical writer/editor seeking new grad roles. </p>
+                        <span class="socials">
+                            <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
+                            <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
+                        </span>
+                    </div> 
+                    <img src='assets/portrait.jpg' id='hero-pic' alt="A portrait of me!">
                 </div>
-                <a id="resm-link" href="assets/Jennifer Pero Resume.pdf">View Resume</a>
+                <a id="resm-link" href="assets/Jennifer Pero Resume.pdf">View my resume</a>
             </div>           
         </div>
 
@@ -67,18 +67,21 @@
                     <h3>About Me</h3>
                     <p>I’m a computer science major at Wichita State University, graduating Spring 2025. Though I’ve always loved tech, I would like a career which intersects with my other lifelong passion: writing and editing!</p>
                     <p>When not writing or learning tech, I love baking, travelling, and all things music and choir.</p>
-                    <span class="socials">
-                        <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
-                        <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
-                    </span>
                 </div> 
-                <img src='assets/IMG_5097.jpg' id='abt-pic'>
+                <img src='assets/IMG_5097.jpg' id='abt-pic' alt="A picture of me at Fort Worth Water Gardens!">
+            </div>
+        </div>
+
+        <!--Experience-->
+        <div id="experience">
+            <div id="exp-card">
+                <h3>Work Experience</h3>
+                <p>Test</p>
             </div>
         </div>
         
         <!--Projects-->
-        <!-- data analytics, technical writing/UX writing, web dev-->
-        <div id="projects">
+        <div id="portfolio">
             <div id="proj-intro">
                 <h3>My Public Portfolio</h3>
                 <h4>Select any of the cards below to view its document in PDF format.</h4>
