completed portfolio section

--- a/index.html
+++ b/index.html
@@ -74,9 +74,31 @@
 
         <!--Experience-->
         <div id="experience">
-            <div id="exp-card">
+            <div id="exp-intro">
                 <h3>Work Experience</h3>
-                <p>Test</p>
+            </div>
+            <div id="exp-list">
+                <div class="exp-card">
+                    <div id="exp-intro">
+                        <div id="exp-title"></div>
+                        <div id="exp-stats"></div>
+                    </div>
+                    <div id="exp-desc"></div>
+                </div>
+                <div class="exp-card">
+                    <div id="exp-intro">
+                        <div id="exp-title"></div>
+                        <div id="exp-stats"></div>
+                    </div>
+                    <div id="exp-desc"></div>
+                </div>
+                <div class="exp-card">
+                    <div id="exp-intro">
+                        <div id="exp-title"></div>
+                        <div id="exp-stats"></div>
+                    </div>
+                    <div id="exp-desc"></div>
+                </div>
             </div>
         </div>
         
@@ -84,10 +106,71 @@
         <div id="portfolio">
             <div id="proj-intro">
                 <h3>My Public Portfolio</h3>
-                <h4>Select any of the cards below to view its document in PDF format.</h4>
+                <p>Select any of the cards below to view its document in PDF format.</p>
+            </div>
+            <div id="project-list">
+
+                <a target="_blank" href="https://www.ti.com/lit/ab/slla644/slla644.pdf?ts=1732891369958&ref_url=https%253A%252F%252Fwww.ecosia.org%252F">
+                <div class="proj-card">
+                    <img class="card-pic" src="assets/appbrief.png">
+                    <div class="card-desc">
+                        <h4>Application Brief - TI</h4>
+                        <h5>Migrated an application brief written by an engineer from Word to Tridion, then edited and released it.</h5>
+                    </div>
+                </div>
+                </a>
+
+                <a target="_blank" href="https://www.ti.com/lit/po/slvt209a/slvt209a.pdf?ts=1732930962916&ref_url=https%253A%252F%252Fwww.google.com%252F">
+                <div class="proj-card">
+                    <img class="card-pic" src="assets/productoverview.png">
+                    <div class="card-desc">
+                        <h4>Product Overview - TI</h4>
+                        <h5>Edited and released a revision of a product overview document.</h5>
+                    </div>
+                </div>
+                </a>
+
+                <a target="_blank" href="assets/TechnicalWritingSamples/Creating a Discord Bot.pdf">
+                <div class="proj-card">
+                    <img class="card-pic" src="assets/TechnicalWritingSamples/discbotpreview.png">
+                    <div class="card-desc">
+                        <h4>How-To Doc - Classwork</h4>
+                        <h5>Guide on how to create a simple Discord greeting bot using Python.</h5>
+                    </div>
+                </div>
+                </a>
+
+                <a target="_blank" href="assets/TechnicalWritingSamples/Documentation Style Guide.pdf">
+                <div class="proj-card">
+                    <img class="card-pic" src="assets/TechnicalWritingSamples/styleguidetitle.png">
+                    <div class="card-desc">
+                        <h4>Style Guide - Classwork</h4>
+                        <h5>Documentation style guide for a fake statistical software company.</h5>
+                    </div>
+                </div>
+                </a>
+
+                <a target="_blank" href="assets/TechnicalWritingSamples/Introduction to AWS Instances.pdf">
+                <div class="proj-card">
+                    <img class="card-pic" src="assets/TechnicalWritingSamples/awsinstance.png">
+                    <div class="card-desc">
+                        <h4>User Guide - Classwork</h4>
+                        <h5>Introductory guide to AWS instances, including how to launch, configure, and connect to one.</h5>
+                    </div>
+                </div>
+                </a>
+
+                <a target="_blank" href="assets/jenny_vid.mov">
+                    <div class="proj-card">
+                        <img class="card-pic" src="assets/video.png">
+                        <div class="card-desc">
+                            <h4>Project Work Video - Classwork</h4>
+                            <h5>Video for senior project course showcasing my script-writing, voiceover, recording, and editing skills.</h5>
+                        </div>
+                    </div>
+                </a>
+
             </div>
         </div>
-
-        <span class="anchor" id="resume"></span>
     </body>
 </html>
