completed exp section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div> 
                     <img src='assets/portrait.jpg' id='hero-pic' alt="A portrait of me!">
                 </div>
-                <a id="resm-link" href="assets/Jennifer Pero Resume.pdf">View my resume</a>
+                <a target="_blank" id="resm-link" href="assets/Jennifer Pero Resume.pdf">View my resume</a>
             </div>           
         </div>
 
@@ -78,26 +78,38 @@
                 <h3>Work Experience</h3>
             </div>
             <div id="exp-list">
-                <div class="exp-card">
-                    <div id="exp-intro">
-                        <div id="exp-title"></div>
-                        <div id="exp-stats"></div>
+
+                <div class="exp-card" id="ttc-exp-card">
+                    <div class="exp-intro">
+                        <div class="exp-title">Student Patent Technical Writer - WSU Office of Tech Transfer and Commercialization</div>
+                        <i class="exp-stats">Wichita, Kansas: October 2024-present</i>
                     </div>
-                    <div id="exp-desc"></div>
+                    <ul class="exp-desc">
+                        <li>Learning about and gaining experience in intellectual property as part of the Gateway to IP student program, including drafting patent applications and researching prior art.</li>
+                    </ul>
                 </div>
-                <div class="exp-card">
-                    <div id="exp-intro">
-                        <div id="exp-title"></div>
-                        <div id="exp-stats"></div>
+
+                <div class="exp-card" id="ti-exp-card">
+                    <div class="exp-intro">
+                        <div class="exp-title">Technical Writing/Editing Intern - Texas Instruments</div>
+                        <i class="exp-stats">Dallas, Texas: May 2024 - August 2024</i>
                     </div>
-                    <div id="exp-desc"></div>
+                    <ul class="exp-desc">
+                        <li>Collaborated with engineers on creating, revising, and publishing content for ti.com.</li>
+                        <li>Performed a data sheet analysis to determine how TI could improve them.</li>
+                        <li>Assisted with updating internal Tech Docs training materials.</li>
+                    </ul>
                 </div>
-                <div class="exp-card">
-                    <div id="exp-intro">
-                        <div id="exp-title"></div>
-                        <div id="exp-stats"></div>
+
+                <div class="exp-card" id="ib-exp-card">
+                    <div class="exp-intro">
+                        <div class="exp-title">Technical Writing Intern - INTRUST Bank</div>
+                        <i class="exp-stats">Wichita, Kansas: May 2023 - May 2024</i>
                     </div>
-                    <div id="exp-desc"></div>
+                    <ul class="exp-desc">
+                        <li>Wrote and edited internal documentation for the Technology department.</li>
+                        <li>Helped develop a department-wide document template, doc life-cycle process, and central repository, and updated documents to the new look.</li>
+                    </ul>
                 </div>
             </div>
         </div>
