--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <body>
         <!--Navigation-->
         <div id="hero-home">
-            <nav class="navbar navbar-expand-md navbar-dark px-3 mb-4">            
-                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <nav class="navbar navbar-expand-md px-3 mb-4">            
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler navbar-dark" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
