--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Navigation-->
         <div id="hero-home">
             <nav class="navbar navbar-expand-md px-3 mb-4">            
-                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler navbar-dark" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
