added recommendation report

--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
                     </div>
                 </a>
 
+                <a target="_blank" href="assets/TechnicalWritingSamples/Data Viz Recommendation Report.pdf">
+                    <div class="proj-card">
+                        <img class="card-pic" src="assets/TechnicalWritingSamples/rec_report_preview.png">
+                        <div class="card-desc">
+                            <h4>Recommendaion Report - Classwork</h4>
+                            <h5>A report recommending the best data visualization software: Power BI or Tableau.</h5>
+                        </div>
+                    </div>
+                </a>
+
             </div>
         </div>
     </body>
