--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <h2>Hi, I'm Jenny!</h2>
                         <p id="hero-desc">An aspiring technical writer/editor seeking new grad roles. </p>
                         <span class="socials">
-                            <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
+                            <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennycpero/" target="_blank" class="fa fa-linkedin"></a>
                             <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
                         </span>
                     </div> 
