removed certain software mention

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <img class="card-pic" src="assets/appbrief.png">
                     <div class="card-desc">
                         <h4>Application Brief - TI</h4>
-                        <h5>Migrated an application brief written by an engineer from Word to Tridion, then edited and released it.</h5>
+                        <h5>Migrated an application brief written by an engineer from Word to our CCMS, then edited and released it.</h5>
                     </div>
                 </div>
                 </a>
