--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div id="abt-card">
                 <div id='abt-text'>
                     <h3>About Me</h3>
-                    <p>I’m a computer science major at Wichita State University, graduating Spring 2025. Though I’ve always loved tech, I would like a career which intersects with my other lifelong passion: writing and editing!</p>
+                    <p>I’m a recent Computer Science grad from Wichita State University. Though I’ve always loved tech, I would like a career which intersects with my other lifelong passion: writing and editing!</p>
                     <p>When not writing or learning tech, I love baking, travelling, and all things music and choir.</p>
                 </div> 
                 <img src='assets/IMG_5097.jpg' id='abt-pic' alt="A picture of me at Fort Worth Water Gardens!">
@@ -186,7 +186,7 @@
                     <div class="proj-card">
                         <img class="card-pic" src="assets/TechnicalWritingSamples/rec_report_preview.png">
                         <div class="card-desc">
-                            <h4>Recommendaion Report - Classwork</h4>
+                            <h4>Recommendation Report - Classwork</h4>
                             <h5>A report recommending the best data visualization software: Power BI or Tableau.</h5>
                         </div>
                     </div>
